* #267: issues with plugin manager. (stranger)
* #268: The cache clear delete .svn folder in /cache and /template_c and svn update gets imposible. (stranger)
* #270: Parse error: syntax error, unexpected T_VARIABLE in \htdocs\include\functions.php on line 1914. (stranger)
* #285: DHTML-Editor: Icons is loading from different folders. (stranger)


== Impresscms 1.1.2==

===2009-01-31 : 1.1.2 RC===

'''Fixed'''
* #167: Issue when doubleclicking a link and unexpectedly getting logged out (PHP issue) (vaughan)
* #166: undefined index xoopsUserId in register.php (vaughan)
* #165: Register fails when disclaimer used & CAPTCHA enabled. (vaughan/rgriffith)
* #164: Activation key is not being sent along with the activation email when set to Activation by Admin. (vaughan)
* #162: The wrong version of purifier library was included. updated to 3.2.0 version. (vaughan)
* #163: Removed password from 'Reset Password' confirmation email (was changed in 1.1. Final but not carried to 1.1.1.) (vaughan)
* #161: Fatal Error in footer.php & header.php. (vaughan)
* #179: some preference settings are being sanitized inappropriately due to textarea being used instead of textsarea. (vaughan)
* #184: TextSanitizer to admin users edit form, for sanitizing signature field when HTML is allowed. (vaughan)
* #178: HTTP_GET_VARS used instead of $_GET['p'] in protection.php causing issues with email protection image. (thanks to hisapapa)
* #185: Blocks Positions admin not totaly secured (real_therplima)
* #193: Character ' stripped out of website title (malanciault)
* #195: Problem again with xoopsimagebrowser.php (real_therplima)
* #204: Mail to User > missing checkbox (malanciault)
* #188: Empty space when rank doesn't have an icon (malanciault)
* #192: Blocksform: Cancel button not working (malanciault)
* #203: TinyMCE and XAMPP relative paths (nekro/malanciault)
* #197: Setting managed groups when creating a new group failed (skenow)