@@ -75,4 +75,5 @@ define('IMANAGER_HEIGHT', 'Height');
 define('IMANAGER_SIZE', 'Size');
 define('IMANAGER_ORIGINAL', 'Original Image');
 define('IMANAGER_EDITED', 'Edited Image');
+define('IMANAGER_FOLDER_NOT_WRITABLE', 'Folder is not writeable by the server.');
 ?>
