@@ -75,7 +75,7 @@
 <{/if}>
 <{if $hasnwrite}>
 <div id="legend">
-  <div class="imgcat_notwrite"><span>Folder is not writeable by the server.</span></div>
+  <div class="imgcat_notwrite"><span><{$lang_imanager_folder_not_writable}></span></div>
 </div>
 <{/if}>
 <div id="addimgform" class="opt_divs" style="display:none; margin:5px; padding:5px;"><{$addimgform}></div>
